; ModuleID = '/home/carl/AnghaBench/vlc/doc/libvlc/extr_d3d9_player.c_Resize_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/doc/libvlc/extr_d3d9_player.c_Resize_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.render_context = type { void (i8*, i32, i32)*, i8*, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, void (i8*, i32, i32)*, i8*)* @Resize_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Resize_cb(i8* %0, void (i8*, i32, i32)* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca void (i8*, i32, i32)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.render_context*, align 8
  store i8* %0, i8** %4, align 8
  store void (i8*, i32, i32)* %1, void (i8*, i32, i32)** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.render_context*
  store %struct.render_context* %9, %struct.render_context** %7, align 8
  %10 = load %struct.render_context*, %struct.render_context** %7, align 8
  %11 = getelementptr inbounds %struct.render_context, %struct.render_context* %10, i32 0, i32 4
  %12 = call i32 @EnterCriticalSection(i32* %11)
  %13 = load void (i8*, i32, i32)*, void (i8*, i32, i32)** %5, align 8
  %14 = load %struct.render_context*, %struct.render_context** %7, align 8
  %15 = getelementptr inbounds %struct.render_context, %struct.render_context* %14, i32 0, i32 0
  store void (i8*, i32, i32)* %13, void (i8*, i32, i32)** %15, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load %struct.render_context*, %struct.render_context** %7, align 8
  %18 = getelementptr inbounds %struct.render_context, %struct.render_context* %17, i32 0, i32 1
  store i8* %16, i8** %18, align 8
  %19 = load %struct.render_context*, %struct.render_context** %7, align 8
  %20 = getelementptr inbounds %struct.render_context, %struct.render_context* %19, i32 0, i32 0
  %21 = load void (i8*, i32, i32)*, void (i8*, i32, i32)** %20, align 8
  %22 = icmp ne void (i8*, i32, i32)* %21, null
  br i1 %22, label %23, label %36

23:                                               ; preds = %3
  %24 = load %struct.render_context*, %struct.render_context** %7, align 8
  %25 = getelementptr inbounds %struct.render_context, %struct.render_context* %24, i32 0, i32 0
  %26 = load void (i8*, i32, i32)*, void (i8*, i32, i32)** %25, align 8
  %27 = load %struct.render_context*, %struct.render_context** %7, align 8
  %28 = getelementptr inbounds %struct.render_context, %struct.render_context* %27, i32 0, i32 1
  %29 = load i8*, i8** %28, align 8
  %30 = load %struct.render_context*, %struct.render_context** %7, align 8
  %31 = getelementptr inbounds %struct.render_context, %struct.render_context* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.render_context*, %struct.render_context** %7, align 8
  %34 = getelementptr inbounds %struct.render_context, %struct.render_context* %33, i32 0, i32 3
  %35 = load i32, i32* %34, align 4
  call void %26(i8* %29, i32 %32, i32 %35)
  br label %36

36:                                               ; preds = %23, %3
  %37 = load %struct.render_context*, %struct.render_context** %7, align 8
  %38 = getelementptr inbounds %struct.render_context, %struct.render_context* %37, i32 0, i32 4
  %39 = call i32 @LeaveCriticalSection(i32* %38)
  ret void
}

declare dso_local i32 @EnterCriticalSection(i32*) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
